Bug 364896 - Discover crash when I press item (comic)
Summary: Discover crash when I press item (comic)
Status: RESOLVED FIXED
Alias: None
Product: Discover
Classification: Applications
Component: discover (other bugs)
Version First Reported In: 5.6.95
Platform: unspecified Linux
: NOR crash
Target Milestone: ---
Assignee: Aleix Pol
URL:
Keywords: drkonqi
: 364785 (view as bug list)
Depends on:
Blocks:
 
Reported: 2016-06-29 13:12 UTC by Mustafa Muhammad
Modified: 2016-07-02 16:20 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Mustafa Muhammad 2016-06-29 13:12:07 UTC
Application: plasma-discover (5.6.95)

Qt Version: 5.6.1
Frameworks Version: 5.23.0
Operating System: Linux 4.7.0-0.rc5.git0.1.fc25.x86_64 x86_64
Distribution: "Fedora release 25 (Rawhide)"

-- Information about the crash:
- What I was doing when the application crashed:
I tried to install item (xkcd comic)
- Custom settings of the application:
I use Fedora Rawhide (testing), so there may be upstream changes.

The crash can be reproduced every time.

-- Backtrace:
Application: Discover (plasma-discover), signal: Segmentation fault
Using host libthread_db library "/lib64/libthread_db.so.1".
84	T_PSEUDO (SYSCALL_SYMBOL, SYSCALL_NAME, SYSCALL_NARGS)
[Current thread is 1 (Thread 0x7f8e927b4100 (LWP 4863))]

Thread 8 (Thread 0x7f8e5a7f3700 (LWP 4885)):
#0  0x00007f8e8e19a49d in poll () at ../sysdeps/unix/syscall-template.S:84
#1  0x00007f8e89e38ca6 in g_main_context_poll (priority=<optimized out>, n_fds=1, fds=0x7f8e50008070, timeout=<optimized out>, context=0x7f8e50000990) at gmain.c:4146
#2  g_main_context_iterate (context=context@entry=0x7f8e50000990, block=block@entry=1, dispatch=dispatch@entry=1, self=<optimized out>) at gmain.c:3846
#3  0x00007f8e89e38dbc in g_main_context_iteration (context=0x7f8e50000990, may_block=may_block@entry=1) at gmain.c:3912
#4  0x00007f8e8ef9f1ab in QEventDispatcherGlib::processEvents (this=0x7f8e500008c0, flags=...) at kernel/qeventdispatcher_glib.cpp:419
#5  0x00007f8e8ef4e5aa in QEventLoop::exec (this=this@entry=0x7f8e5a7f2c50, flags=..., flags@entry=...) at kernel/qeventloop.cpp:204
#6  0x00007f8e8edad303 in QThread::exec (this=this@entry=0x55ed3991f150) at thread/qthread.cpp:500
#7  0x00007f8e92078c36 in QQuickPixmapReader::run (this=0x55ed3991f150) at /usr/src/debug/qtdeclarative-opensource-src-5.6.1/src/quick/util/qquickpixmapcache.cpp:817
#8  0x00007f8e8edb195a in QThreadPrivate::start (arg=0x55ed3991f150) at thread/qthread_unix.cpp:341
#9  0x00007f8e8c6fb6ca in start_thread (arg=0x7f8e5a7f3700) at pthread_create.c:333
#10 0x00007f8e8e1a649f in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:105

Thread 7 (Thread 0x7f8e5b3fe700 (LWP 4877)):
#0  pthread_cond_timedwait@@GLIBC_2.3.2 () at ../sysdeps/unix/sysv/linux/x86_64/pthread_cond_timedwait.S:225
#1  0x00007f8e8edb1fb8 in QWaitConditionPrivate::wait_relative (time=30000, this=0x7f8e54005520) at thread/qwaitcondition_unix.cpp:126
#2  QWaitConditionPrivate::wait (time=30000, this=0x7f8e54005520) at thread/qwaitcondition_unix.cpp:134
#3  QWaitCondition::wait (this=this@entry=0x7f8e54005240, mutex=mutex@entry=0x7f8e54004fa0, time=30000) at thread/qwaitcondition_unix.cpp:208
#4  0x00007f8e8edae8ed in QThreadPoolThread::run (this=0x7f8e54005230) at thread/qthreadpool.cpp:127
#5  0x00007f8e8edb195a in QThreadPrivate::start (arg=0x7f8e54005230) at thread/qthread_unix.cpp:341
#6  0x00007f8e8c6fb6ca in start_thread (arg=0x7f8e5b3fe700) at pthread_create.c:333
#7  0x00007f8e8e1a649f in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:105

Thread 6 (Thread 0x7f8e5bbff700 (LWP 4876)):
#0  0x00007f8e8ee4da78 in qt_gettime () at tools/qelapsedtimer_unix.cpp:172
#1  0x00007f8e8ef9d7c9 in QTimerInfoList::updateCurrentTime (this=this@entry=0x7f8e54002ed0) at kernel/qtimerinfo_unix.cpp:84
#2  0x00007f8e8ef9dbc5 in QTimerInfoList::timerWait (this=0x7f8e54002ed0, tm=...) at kernel/qtimerinfo_unix.cpp:381
#3  0x00007f8e8ef9ed0c in timerSourcePrepareHelper (src=<optimized out>, timeout=0x7f8e5bbfeaf4) at kernel/qeventdispatcher_glib.cpp:126
#4  0x00007f8e8ef9edd5 in timerSourcePrepare (source=<optimized out>, timeout=timeout@entry=0x7f8e5bbfeaf4) at kernel/qeventdispatcher_glib.cpp:159
#5  0x00007f8e89e381dd in g_main_context_prepare (context=context@entry=0x7f8e54000990, priority=priority@entry=0x7f8e5bbfeb80) at gmain.c:3453
#6  0x00007f8e89e38bcb in g_main_context_iterate (context=context@entry=0x7f8e54000990, block=block@entry=1, dispatch=dispatch@entry=1, self=<optimized out>) at gmain.c:3831
#7  0x00007f8e89e38dbc in g_main_context_iteration (context=0x7f8e54000990, may_block=may_block@entry=1) at gmain.c:3912
#8  0x00007f8e8ef9f1ab in QEventDispatcherGlib::processEvents (this=0x7f8e540008c0, flags=...) at kernel/qeventdispatcher_glib.cpp:419
#9  0x00007f8e8ef4e5aa in QEventLoop::exec (this=this@entry=0x7f8e5bbfecc0, flags=..., flags@entry=...) at kernel/qeventloop.cpp:204
#10 0x00007f8e8edad303 in QThread::exec (this=<optimized out>) at thread/qthread.cpp:500
#11 0x00007f8e8edb195a in QThreadPrivate::start (arg=0x55ed37b30130) at thread/qthread_unix.cpp:341
#12 0x00007f8e8c6fb6ca in start_thread (arg=0x7f8e5bbff700) at pthread_create.c:333
#13 0x00007f8e8e1a649f in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:105

Thread 5 (Thread 0x7f8e66906700 (LWP 4868)):
#0  0x00007f8e8e19606d in read () at ../sysdeps/unix/syscall-template.S:84
#1  0x00007f8e89e7bb90 in read (__nbytes=16, __buf=0x7f8e66905ab0, __fd=<optimized out>) at /usr/include/bits/unistd.h:44
#2  g_wakeup_acknowledge (wakeup=0x7f8e60002390) at gwakeup.c:210
#3  0x00007f8e89e38784 in g_main_context_check (context=context@entry=0x7f8e5c000990, max_priority=2147483647, fds=fds@entry=0x7f8e5c003070, n_fds=n_fds@entry=1) at gmain.c:3643
#4  0x00007f8e89e38c44 in g_main_context_iterate (context=context@entry=0x7f8e5c000990, block=block@entry=1, dispatch=dispatch@entry=1, self=<optimized out>) at gmain.c:3848
#5  0x00007f8e89e38dbc in g_main_context_iteration (context=0x7f8e5c000990, may_block=may_block@entry=1) at gmain.c:3912
#6  0x00007f8e8ef9f1ab in QEventDispatcherGlib::processEvents (this=0x7f8e5c0008c0, flags=...) at kernel/qeventdispatcher_glib.cpp:419
#7  0x00007f8e8ef4e5aa in QEventLoop::exec (this=this@entry=0x7f8e66905cc0, flags=..., flags@entry=...) at kernel/qeventloop.cpp:204
#8  0x00007f8e8edad303 in QThread::exec (this=<optimized out>) at thread/qthread.cpp:500
#9  0x00007f8e8edb195a in QThreadPrivate::start (arg=0x55ed37887080) at thread/qthread_unix.cpp:341
#10 0x00007f8e8c6fb6ca in start_thread (arg=0x7f8e66906700) at pthread_create.c:333
#11 0x00007f8e8e1a649f in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:105

Thread 4 (Thread 0x7f8e6d9fa700 (LWP 4867)):
#0  0x00007f8e89e7cf39 in g_mutex_lock (mutex=mutex@entry=0x7f8e60000990) at gthread-posix.c:1336
#1  0x00007f8e89e38826 in g_main_context_dispatch (context=context@entry=0x7f8e60000990) at gmain.c:3776
#2  0x00007f8e89e38d10 in g_main_context_iterate (context=context@entry=0x7f8e60000990, block=block@entry=1, dispatch=dispatch@entry=1, self=<optimized out>) at gmain.c:3851
#3  0x00007f8e89e38dbc in g_main_context_iteration (context=0x7f8e60000990, may_block=may_block@entry=1) at gmain.c:3912
#4  0x00007f8e8ef9f1ab in QEventDispatcherGlib::processEvents (this=0x7f8e600008c0, flags=...) at kernel/qeventdispatcher_glib.cpp:419
#5  0x00007f8e8ef4e5aa in QEventLoop::exec (this=this@entry=0x7f8e6d9f9ca0, flags=..., flags@entry=...) at kernel/qeventloop.cpp:204
#6  0x00007f8e8edad303 in QThread::exec (this=this@entry=0x55ed373f9dc0) at thread/qthread.cpp:500
#7  0x00007f8e91be7935 in QQmlThreadPrivate::run (this=0x55ed373f9dc0) at /usr/src/debug/qtdeclarative-opensource-src-5.6.1/src/qml/qml/ftw/qqmlthread.cpp:141
#8  0x00007f8e8edb195a in QThreadPrivate::start (arg=0x55ed373f9dc0) at thread/qthread_unix.cpp:341
#9  0x00007f8e8c6fb6ca in start_thread (arg=0x7f8e6d9fa700) at pthread_create.c:333
#10 0x00007f8e8e1a649f in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:105

Thread 3 (Thread 0x7f8e6ec0b700 (LWP 4866)):
#0  0x00007f8e8e19a49d in poll () at ../sysdeps/unix/syscall-template.S:84
#1  0x00007f8e89e38ca6 in g_main_context_poll (priority=<optimized out>, n_fds=1, fds=0x7f8e680137f0, timeout=<optimized out>, context=0x7f8e68000990) at gmain.c:4146
#2  g_main_context_iterate (context=context@entry=0x7f8e68000990, block=block@entry=1, dispatch=dispatch@entry=1, self=<optimized out>) at gmain.c:3846
#3  0x00007f8e89e38dbc in g_main_context_iteration (context=0x7f8e68000990, may_block=may_block@entry=1) at gmain.c:3912
#4  0x00007f8e8ef9f1ab in QEventDispatcherGlib::processEvents (this=0x7f8e680008c0, flags=...) at kernel/qeventdispatcher_glib.cpp:419
#5  0x00007f8e8ef4e5aa in QEventLoop::exec (this=this@entry=0x7f8e6ec0ac80, flags=..., flags@entry=...) at kernel/qeventloop.cpp:204
#6  0x00007f8e8edad303 in QThread::exec (this=this@entry=0x7f8e9297b060 <(anonymous namespace)::Q_QGS__q_manager::innerFunction()::holder>) at thread/qthread.cpp:500
#7  0x00007f8e92906529 in QDBusConnectionManager::run (this=0x7f8e9297b060 <(anonymous namespace)::Q_QGS__q_manager::innerFunction()::holder>) at qdbusconnection.cpp:189
#8  0x00007f8e8edb195a in QThreadPrivate::start (arg=0x7f8e9297b060 <(anonymous namespace)::Q_QGS__q_manager::innerFunction()::holder>) at thread/qthread_unix.cpp:341
#9  0x00007f8e8c6fb6ca in start_thread (arg=0x7f8e6ec0b700) at pthread_create.c:333
#10 0x00007f8e8e1a649f in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:105

Thread 2 (Thread 0x7f8e7706e700 (LWP 4865)):
#0  0x00007f8e8e19a49d in poll () at ../sysdeps/unix/syscall-template.S:84
#1  0x00007f8e8676ed10 in poll (__timeout=-1, __nfds=1, __fds=0x7f8e7706dbc0) at /usr/include/bits/poll2.h:46
#2  _xcb_conn_wait (c=c@entry=0x55ed37388e20, cond=cond@entry=0x55ed37388e60, vector=vector@entry=0x0, count=count@entry=0x0) at xcb_conn.c:479
#3  0x00007f8e86770aa9 in xcb_wait_for_event (c=0x55ed37388e20) at xcb_in.c:693
#4  0x00007f8e7ae47d79 in QXcbEventReader::run (this=0x55ed373934d0) at qxcbconnection.cpp:1325
#5  0x00007f8e8edb195a in QThreadPrivate::start (arg=0x55ed373934d0) at thread/qthread_unix.cpp:341
#6  0x00007f8e8c6fb6ca in start_thread (arg=0x7f8e7706e700) at pthread_create.c:333
#7  0x00007f8e8e1a649f in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:105

Thread 1 (Thread 0x7f8e927b4100 (LWP 4863)):
[KCrash Handler]
#6  0x00007f8e659032ba in KNS3::Entry::size (this=<optimized out>) at /usr/src/debug/knewstuff-5.23.0/src/entry.cpp:129
#7  0x00007f8e65bba21d in KNSResource::size (this=<optimized out>) at /usr/src/debug/discover-5.6.95/libdiscover/backends/KNSBackend/KNSResource.cpp:133
#8  0x00007f8e91d5047e in AbstractResource::sizeDescription (this=<optimized out>) at /usr/src/debug/discover-5.6.95/libdiscover/resources/AbstractResource.cpp:100
#9  0x00007f8e91d58cd7 in AbstractResource::qt_static_metacall (_o=_o@entry=0x55ed39d4cc90, _c=_c@entry=QMetaObject::ReadProperty, _id=_id@entry=18, _a=_a@entry=0x7ffde6ae3060) at /usr/src/debug/discover-5.6.95/x86_64-redhat-linux-gnu/libdiscover/moc_AbstractResource.cpp:289
#10 0x00007f8e91d5b2eb in AbstractResource::qt_metacall (this=0x55ed39d4cc90, _c=QMetaObject::ReadProperty, _id=18, _a=0x7ffde6ae3060) at /usr/src/debug/discover-5.6.95/x86_64-redhat-linux-gnu/libdiscover/moc_AbstractResource.cpp:341
#11 0x00007f8e91b2bc7d in ReadAccessor::Direct (property=..., n=0x0, output=0x7ffde6ae3040, object=0x55ed39d4cc90) at /usr/src/debug/qtdeclarative-opensource-src-5.6.1/src/qml/jsruntime/qv4qobjectwrapper.cpp:129
#12 LoadProperty<ReadAccessor::Direct> (v4=0x55ed37426d80, object=0x55ed39d4cc90, property=..., notifier=0x0) at /usr/src/debug/qtdeclarative-opensource-src-5.6.1/src/qml/jsruntime/qv4qobjectwrapper.cpp:172
#13 0x00007f8e91b2c83d in QV4::QObjectWrapper::getProperty (engine=engine@entry=0x55ed37426d80, object=0x55ed39d4cc90, property=0x7f8e6037ef48, captureRequired=captureRequired@entry=true) at /usr/src/debug/qtdeclarative-opensource-src-5.6.1/src/qml/jsruntime/qv4qobjectwrapper.cpp:378
#14 0x00007f8e91b2cfbc in QV4::QObjectWrapper::getQmlProperty (this=0x7f8e6c9fba28, qmlContext=0x55ed39db19e0, name=0x7f8e6c9fba20, revisionMode=QV4::QObjectWrapper::IgnoreRevision, hasProperty=0x0, includeImports=<optimized out>) at /usr/src/debug/qtdeclarative-opensource-src-5.6.1/src/qml/jsruntime/qv4qobjectwrapper.cpp:318
#15 0x00007f8e91b43256 in QV4::Object::get (hasProperty=0x0, name=<optimized out>, this=<optimized out>) at /usr/src/debug/qtdeclarative-opensource-src-5.6.1/src/qml/jsruntime/qv4object_p.h:298
#16 QV4::Runtime::getProperty (engine=0x55ed37426d80, object=..., nameIndex=<optimized out>) at /usr/src/debug/qtdeclarative-opensource-src-5.6.1/src/qml/jsruntime/qv4runtime.cpp:675
#17 0x00007f8e66b97de6 in ?? ()
#18 0x0000000000000000 in ?? ()

Reported using DrKonqi
Comment 1 Aleix Pol 2016-07-01 14:06:28 UTC
*** Bug 364785 has been marked as a duplicate of this bug. ***
Comment 2 Aleix Pol 2016-07-01 14:19:33 UTC
Would it be possible to check if this fixes the problem? I cannot reproduce.
https://git.reviewboard.kde.org/r/128336/
Comment 3 Mustafa Muhammad 2016-07-02 07:53:36 UTC
(In reply to Aleix Pol from comment #2)
> Would it be possible to check if this fixes the problem? I cannot reproduce.
> https://git.reviewboard.kde.org/r/128336/

How can I check? rebuild from master branch?
Comment 4 Aleix Pol 2016-07-02 16:20:59 UTC
Git commit fc2e7f5865df1c2bd83dced01ba046b76382ce5b by Aleix Pol.
Committed on 02/07/2016 at 16:11.
Pushed by apol into branch 'master'.

Make sure we have a size to offer

REVIEW: 128336

M  +1    -1    src/entry.cpp

http://commits.kde.org/knewstuff/fc2e7f5865df1c2bd83dced01ba046b76382ce5b