Make sure we have a size to offer

REVIEW: 128336
BUG: 364896